--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Venmo Customer Support</title>
+    <title>EBAY Customer Support</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -56,7 +56,7 @@
 <body>
 
 <header>
-    <h1>Venmo Customer Support</h1>
+    <h1>EBAY Customer Support</h1>
 </header>
 
 <div class="container">
@@ -69,13 +69,14 @@
 
         <!-- Call Button with auto-dial -->
         <a href="tel:+18883497295" class="call-button">++1 (888) 844-5596</a>
-        <a href="tel:+18883497295" class="call-button">Venmo Helpline Number</a>
-        <a href="tel:+18883497295" class="call-button">Venmo Customer Service</a>
-        <a href="tel:+18883497295" class="call-button">Venmo Contact</a>
-        <a href="tel:+18883497295" class="call-button">Venmo Support</a>
+        <a href="tel:+18883497295" class="call-button">EBAY Helpline Number</a>
+        <a href="tel:+18883497295" class="call-button">EBAY Customer Service</a>
+        <a href="tel:+18883497295" class="call-button">EBAY Contact</a>
+        <a href="tel:+18883497295" class="call-button">EBAY Support</a>
     </div>
 </div>
 
 
 
 </body></html>
+
